[package]
name = "obsidian"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
base64 = "0.22.1"
colored = "3.1.1"
rand = "0.10.0"
rustyline = "17.0.2"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.149"
zeroize = "1.8.2"
zxcvbn = "3.1.0"
